--- a/index.html
+++ b/index.html
@@ -2,83 +2,73 @@
 <html>
 <head>
     <title>Blackjack Royale</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensure proper scaling on mobile -->
     <style>
         body {
             font-family: 'Segoe UI', Arial, sans-serif;
             background: linear-gradient(135deg, #1a2a6c, #b21f1f, #fdbb2d);
             color: #fff;
             margin: 0;
-            padding: 2vw; /* Use relative units */
+            padding: 20px;
             min-height: 100vh;
-            overflow-x: hidden; /* Prevent horizontal scrolling */
         }
         h1 {
-            text-shadow: 0.2rem 0.2rem 0.4rem rgba(0,0,0,0.3);
-            font-size: 2.5rem; /* Use rem for font scaling */
-            text-align: center;
-            margin: 1rem 0;
+            text-shadow: 2px 2px 4px rgba(0,0,0,0.3);
+            font-size: 2.5em;
         }
         #game-area {
             background: rgba(0, 0, 0, 0.85);
-            padding: 2rem;
-            border-radius: 1rem;
-            max-width: 90vw; /* Use relative width */
+            padding: 25px;
+            border-radius: 15px;
+            max-width: 800px;
             margin: 0 auto;
-            box-shadow: 0 0 1.5rem rgba(0,0,0,0.5);
+            box-shadow: 0 0 20px rgba(0,0,0,0.5);
             display: none;
         }
         .hand-container {
-            margin: 1rem 0;
-            min-height: 6rem;
+            margin: 15px 0;
+            min-height: 100px;
         }
         .card {
             display: inline-block;
-            width: 4.5rem; /* Adjusted for smaller screens */
-            height: 6.5rem;
-            margin: 0.3rem;
-            padding: 0.5rem;
+            width: 70px;
+            height: 100px;
+            margin: 5px;
+            padding: 10px;
             background: #fff;
             color: black;
-            border-radius: 0.5rem;
-            box-shadow: 0.1rem 0.1rem 0.3rem rgba(0,0,0,0.3);
-            font-size: 1rem;
+            border-radius: 8px;
+            box-shadow: 2px 2px 5px rgba(0,0,0,0.3);
+            font-size: 1.2em;
             position: relative;
-            transition: transform 0.2s ease; /* Optimized transition */
-            vertical-align: top;
+            transition: transform 0.2s;
         }
         .card:hover {
-            transform: translateY(-0.3rem); /* Keep hover for desktop */
+            transform: translateY(-5px);
         }
         .suit {
-            font-size: 1.2rem;
+            font-size: 1.5em;
             position: absolute;
-            bottom: 0.3rem;
-            right: 0.3rem;
+            bottom: 5px;
+            right: 5px;
         }
         .hearts, .diamonds { color: #e74c3c; }
         .spades, .clubs { color: #2c3e50; }
         button {
-            padding: 0.8rem 1.5rem;
-            margin: 0.5rem;
+            padding: 12px 20px;
+            margin: 5px;
             background: linear-gradient(45deg, #ff6b6b, #ff8e53);
             border: none;
-            border-radius: 1.5rem;
+            border-radius: 25px;
             color: white;
             cursor: pointer;
-            font-size: 1rem;
+            font-size: 1em;
             text-transform: uppercase;
-            letter-spacing: 0.1rem;
-            transition: transform 0.2s ease, box-shadow 0.2s ease;
-            touch-action: manipulation; /* Improve touch responsiveness */
+            letter-spacing: 1px;
+            transition: all 0.3s;
         }
         button:hover:not(:disabled) {
             transform: scale(1.05);
-            box-shadow: 0 0 1rem rgba(255,107,107,0.5);
-        }
-        button:active:not(:disabled) {
-            transform: scale(0.95); /* Feedback for touch */
-            box-shadow: 0 0 0.5rem rgba(255,107,107,0.3);
+            box-shadow: 0 0 15px rgba(255,107,107,0.5);
         }
         button:disabled {
             background: #666;
@@ -87,11 +77,11 @@
         }
         #trivia-area {
             background: rgba(46, 204, 113, 0.9);
-            padding: 1.5rem;
-            border-radius: 1rem;
-            margin: 1rem auto;
-            max-width: 90vw;
-            box-shadow: 0 0 1rem rgba(0,0,0,0.3);
+            padding: 20px;
+            border-radius: 15px;
+            margin: 20px auto;
+            max-width: 600px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.3);
             text-align: center;
             display: none;
         }
@@ -101,31 +91,23 @@
         }
         #welcome-screen, #pregame-trivia, #trivia-topic-selection, #pregame-trivia-topic-selection, #table-menu {
             background: rgba(44, 62, 80, 0.9);
-            padding: 1.5rem;
-            border-radius: 1rem;
-            margin: 1rem auto;
-            max-width: 90vw;
-            box-shadow: 0 0 1rem rgba(0,0,0,0.3);
+            padding: 20px;
+            border-radius: 15px;
+            margin: 20px auto;
+            max-width: 600px;
+            box-shadow: 0 0 20px rgba(0,0,0,0.3);
             text-align: center;
         }
         #welcome-screen h2, #pregame-trivia h2, #trivia-topic-selection h2, #pregame-trivia-topic-selection h2, #table-menu h2 {
             margin-top: 0;
-            font-size: 1.8rem;
-        }
-        .topic-buttons, .preset-buttons {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
         }
         .topic-buttons button, .preset-buttons button {
             background: linear-gradient(45deg, #3498db, #2980b9);
-            margin: 0.3rem;
-            flex: 1 1 auto;
-            min-width: 5rem;
+            margin: 5px;
         }
         .preset-buttons button:hover, .topic-buttons button:hover {
             transform: scale(1.05);
-            box-shadow: 0 0 1rem rgba(52, 152, 219, 0.5);
+            box-shadow: 0 0 15px rgba(52, 152, 219, 0.5);
         }
         #message-modal {
             display: none;
@@ -141,23 +123,23 @@
         }
         #message-modal-content {
             background: #2c3e50;
-            padding: 1.5rem;
-            border-radius: 0.8rem;
-            max-width: 90vw;
+            padding: 20px;
+            border-radius: 10px;
+            max-width: 400px;
             text-align: center;
-            box-shadow: 0 0 1rem rgba(255, 107, 107, 0.5);
+            box-shadow: 0 0 20px rgba(255, 107, 107, 0.5);
         }
         #message-modal-content p {
-            margin: 0 0 1rem 0;
-            font-size: 1.2rem;
+            margin: 0 0 20px 0;
+            font-size: 1.2em;
         }
         #message-modal-content button {
             background: linear-gradient(45deg, #3498db, #2980b9);
-            margin: 0.3rem;
+            margin: 5px;
         }
         #message-modal-content button:hover {
             transform: scale(1.05);
-            box-shadow: 0 0 1rem rgba(52, 152, 219, 0.5);
+            box-shadow: 0 0 15px rgba(52, 152, 219, 0.5);
         }
         #table-menu button {
             background: linear-gradient(45deg, #2ecc71, #27ae60);
@@ -168,70 +150,7 @@
         }
         #table-menu button:hover:not(:disabled) {
             transform: scale(1.05);
-            box-shadow: 0 0 1rem rgba(46, 204, 113, 0.5);
-        }
-
-        /* Mobile-specific styles (screens smaller than 768px) */
-        @media (max-width: 768px) {
-            body {
-                padding: 1rem;
-            }
-            h1 {
-                font-size: 1.8rem;
-            }
-            #game-area, #welcome-screen, #pregame-trivia, #trivia-topic-selection, #pregame-trivia-topic-selection, #table-menu {
-                padding: 1rem;
-                max-width: 100%;
-            }
-            .card {
-                width: 3.5rem;
-                height: 5rem;
-                font-size: 0.8rem;
-                margin: 0.2rem;
-            }
-            .suit {
-                font-size: 1rem;
-            }
-            button {
-                padding: 0.6rem 1rem;
-                font-size: 0.9rem;
-                margin: 0.2rem;
-            }
-            .topic-buttons button, .preset-buttons button {
-                min-width: 4rem;
-                padding: 0.5rem;
-            }
-            #game-area p, #welcome-screen p, #pregame-trivia p, #trivia-topic-selection p, #table-menu p {
-                font-size: 0.9rem;
-            }
-            #welcome-screen h2, #pregame-trivia h2, #trivia-topic-selection h2, #pregame-trivia-topic-selection h2, #table-menu h2 {
-                font-size: 1.4rem;
-            }
-            #message-modal-content {
-                padding: 1rem;
-            }
-            #message-modal-content p {
-                font-size: 1rem;
-            }
-            .hand-container {
-                min-height: 4rem;
-            }
-            #bet-amount {
-                width: 5rem;
-                padding: 0.5rem;
-                font-size: 0.9rem;
-            }
-        }
-
-        /* Desktop-specific styles (screens larger than 768px) */
-        @media (min-width: 769px) {
-            #game-area, #welcome-screen, #pregame-trivia, #trivia-topic-selection, #pregame-trivia-topic-selection, #table-menu {
-                max-width: 800px;
-            }
-            .card {
-                width: 4.5rem;
-                height: 6.5rem;
-            }
+            box-shadow: 0 0 15px rgba(46, 204, 113, 0.5);
         }
     </style>
 </head>
@@ -699,7 +618,7 @@
             updateDisplay();
             if (calculateHandTotal(targetHand) > 21) {
                 if (isSplit && !split) hit(true);
-                else表現 endRound();
+                else endRound();
             }
         }
 
@@ -851,7 +770,7 @@
         function answerTrivia(choice) {
             const triviaArea = document.getElementById("trivia-area");
             if (choice === currentTrivia.answer) {
-                bankroll += 150;
+                bankroll += 150; // Changed from $20 to $150 for redemption trivia
                 showMessage("Correct! You've won $150 to continue playing!");
             } else {
                 bankroll = 100;
